--- a/my-app/src/components/Projetos.module.css
+++ b/my-app/src/components/Projetos.module.css
@@ -39,6 +39,7 @@
     color: var(--white);
     font-size: 1.5rem;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .container_text strong a:hover{
