--- a/my-app/src/components/Trabalhos.module.css
+++ b/my-app/src/components/Trabalhos.module.css
@@ -2,7 +2,8 @@
     padding: 5rem 5rem;
     display: flex;
     flex-direction: column;
-    color: var(--black);
+    color: var(--white);
+    background: var(--gray-300);
 }
 
 .text h1 {
