--- a/my-app/src/components/Header.module.css
+++ b/my-app/src/components/Header.module.css
@@ -17,7 +17,6 @@
 .img {
     display: flex;
     justify-content: right;
-    width: 100%;
     margin-top: -1.5rem;
     overflow: hidden;
 
@@ -25,7 +24,6 @@
 
 .text {
     position: absolute;
-    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -74,22 +72,23 @@
 }
 
 @media screen and (max-width: 1020px) {
-    .text {
-        width: 100%;
-    }
-
     .text h1 {
         font-size: 7rem;
-        margin-right: 25rem;
+        text-align: left;
+        margin-left: -3.5rem;
+    }
+
+    .img {
+        margin-right: -1rem;
     }
     
     .content_text strong {
         font-size: 6rem;
-        margin-right: 20rem;
+        margin-right: 18rem;
     }
 
     .content_text>span {
-        margin-right: 18rem;
+        margin-right: 17rem;
     
     }
 }
