--- a/my-app/src/components/Header.module.css
+++ b/my-app/src/components/Header.module.css
@@ -73,16 +73,11 @@
 
 @media screen and (max-width: 450px) {
 
-    .header {
-        margin: 0;
-        padding: 0;
-    }
-
     .text {
         position: absolute;
-        top: 50%;
-        left: 30%;
-        transform: translate(-40%, -50%);
+        left: 50%;
+        width: 100%;
+        transform: translate(-64%, -50%);
     }
 
     .text h1 {
@@ -90,6 +85,7 @@
         width: 100%;
         margin-left: -3.5rem;
     }
+
     .content_text strong {
         font-size: 6rem;
         margin-left: -3rem;
