--- a/my-app/src/components/Header.module.css
+++ b/my-app/src/components/Header.module.css
@@ -10,8 +10,8 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 696px;
-    background-color: var(--white);
+    height: 674px;
+    background-color: var(--black-600);
 }
 
 .img {
@@ -24,11 +24,10 @@
 
 .text {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
     text-align: center;
-    color: var(--black);
+    top: 15%;
+    color: var(--white);
     display: flex;
     flex-direction: column;
 }
@@ -36,9 +35,9 @@
 .text h1 {
     font-family: 'BritannySignature', sans-serif;
     font-weight: 400;
+    width: 100%;
     font-style: normal;
     font-size: 8rem;
-    margin-right: 3.5rem;
 }
 
 .content_text {
@@ -51,44 +50,24 @@
 }
 
 .content_text strong {
-    color: var(--black);
     font-size: 7.5rem;
     font-weight: 400;
     font-style: inherit;
+    width: 100%;
 
 
 }
 
 .content_text>span {
-    color: var(--black);
     font-size: 1.5rem;
     font-weight: 400;
     font-style: inherit;
+    width: 100%;
 
-}
-
-.color {
-    color: var(--white);
 }
 
 @media screen and (max-width: 768px) {
 
-    .text {
-        position: absolute;
-        left: 50%;
-        width: 100%;
-        transform: translate(-64%, -50%);
-    }
 
-    .text h1 {
-        font-size: 7rem;
-        width: 100%;
-        margin-left: -3.5rem;
-    }
 
-    .content_text strong {
-        font-size: 6rem;
-        margin-left: -3rem;
-
-    }
 }
