--- a/my-app/src/components/SobreMim.module.css
+++ b/my-app/src/components/SobreMim.module.css
@@ -2,13 +2,12 @@
     padding: 5rem 5rem;
     display: flex;
     justify-content: space-between;
-
+    align-items: center;
 }
 
 .text {
     display: flex;
     flex-direction: column;
-    align-items: start;
     color: var(--black);
     gap: 5rem;
     width: 50%;
@@ -40,7 +39,8 @@
 }
 
 .img img{
-    max-width: 24rem;
+    max-width: 22rem;
+
 }
 
 .negrito {
