--- a/my-app/src/components/Header.module.css
+++ b/my-app/src/components/Header.module.css
@@ -6,31 +6,15 @@
 }
 
 .header {
-    position: relative;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 674px;
+    display: flex;
+    justify-content: center;
+    padding: 5rem 5rem;
     background-color: var(--black-600);
 }
 
-.img {
-    display: flex;
-    justify-content: right;
-    margin-top: -1.4rem;
-    overflow: hidden;
-
-}
-
 .text {
-    position: absolute;
     text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: var(--white);
-    display: flex;
-    flex-direction: column;
 }
 
 .text h1 {
@@ -46,7 +30,6 @@
     flex-direction: column;
     align-items: center;
     gap: 0.1rem;
-    margin-right: -2rem;
 
 }
 
@@ -55,8 +38,6 @@
     font-weight: 400;
     font-style: inherit;
     width: 100%;
-
-
 }
 
 .content_text>span {
@@ -68,7 +49,4 @@
 }
 
 @media screen and (max-width: 768px) {
-
-
-
 }
